# MFranceschi_CppLibrary

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  MyWorksVS.sln  MyWorksVS.vcxproj  MyWorksVS.vcxproj.filters  Readme.md  Timing tests.md  todo.md
Async/: CMakeLists.txt  hhh.cpp
Async/src/: Command.cpp  CommandHelper.hpp  CommandHelper_Generic.cpp  CommandHelper_Unix.cpp  CommandHelper_Windows.cpp  Command_Windows.cpp  Command_Windows_commons.hpp  Command_Windows_consoleChoices.cpp  Command_Windows_misc.cpp  Command_Windows_runner.cpp  Command_commons.hpp  Command_commons_unix.cpp  Command_commons_unix.hpp  Command_commons_windows.cpp  Command_commons_windows.hpp  Command_console_choices_unix.cpp  Command_console_choices_windows.cpp  Command_run.cpp  Command_runner_unix.cpp  Command_runner_windows.cpp  Command_stateful_base.cpp  Command_windows_console_choices.cpp  Command_windows_utils.cpp  Command_windows_utils.hpp  UnixAPIHelper.cpp  UnixAPIHelper.hpp  WindowsAPIHelper.cpp  WindowsAPIHelper.hpp
Async/tests/: CMakeLists.txt  abc.txt  command_test.cpp  command_test_HelloWorld.cpp  command_test_LengthOfFirstArg.cpp  command_test_LengthOfInput.cpp  command_test_OneForEachStream.cpp  command_test_ReturnNbArgs.cpp  command_test_commons.hpp
Bytes/: CMakeLists.txt
Bytes/src/: Bytes.cpp
Bytes/tests/: Bytes_tests.cpp  CMakeLists.txt
C IrregularVerbs/: .gitignore  CMakeLists.txt  Conception.md  Controller.c  Controller.h  ControllerExercise.c  ControllerListSearch.c  README.MD  README.md  SQLiteInterface.c  SQLiteInterface.h  Strings.c  Strings.h  Utils.c  Utils.h  Verb.c  Verb.h  VerbsContainer.c  VerbsContainer.h  View.c  View.h  main.c  main.h
C IrregularVerbs/Low-Level Implementations/: FileStreamManipulations.c  FileStreamManipulations.h  SQLiteDriver.c  SQLiteInterface.c  SQLiteInterface.h
C IrregularVerbs/Texts/: Interface_French.c  Interface_French.h  Interface_Texts.h  Interface_Texts_FR.c
C IrregularVerbs/View/: IncludeCurses.h  NCurses_Inputs_Driver.c  NCurses_Outputs_Helpers.h  View.c  ViewExercise.c  ViewInternals.h  ViewMisc.c
C IrregularVerbs/extlibs/: CMakeLists.txt
C IrregularVerbs/rsc/: get_verbs.py  queries.json  queries.sql  verbs.csv
C IrregularVerbs/utils/: IncludeCurses.h  NCurses_Commons.c  NCurses_Commons.h  NCurses_Input_Driver.c  NCurses_Input_Driver.h  NCurses_Inputs_Driver.c  NCurses_Inputs_Driver.h  NCurses_Output_Driver.c  NCurses_Output_Driver.h  NCurses_Outputs_Helpers.c  SQLiteDriver.c  SQLiteDriver.h  Strings.c  Strings.h  Utils.c  Utils.h  ftime.c  ftime.h  ftime_useful_defs.h
C IrregularVerbs/verbs/: get_verbs.py  verbs.csv
C++ Libraries/: ArgumentsParser.cpp  ArgumentsParser.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Date.cpp  Date.hpp  File.cpp  File.hpp  GeoCoord.cpp  GeoCoord.h  GeoCoord.hpp  TestWin.cpp  TimingExperience.cpp  TimingExperience.hpp  Toolbox.cpp  Toolbox.hpp  WindowsAPIHelper.cpp  WindowsAPIHelper.hpp  main.cpp  main.h  testsForArguments.hpp
C++ Libraries/Google_tests/: CMakeLists.txt  arguments_parser_tests.cpp  file_tests.cpp  tests_datas.hpp
C++ Libraries/TimingExperience/: CMakeLists.txt  TimingExperience.cpp
C++ Libraries/includes/: MFranceschi_CppLibrary.hpp
C++ Libraries/src/: CMakeLists.txt  Command.cpp  File.cpp  GeoCoord.cpp  MinGW.CMakeLists.txt.in  TimingExperience.cpp  Toolbox.cpp  UnixAPIHelper.cpp  WindowsAPIHelper.cpp  main.cpp
C++ Libraries/test/: CMakeLists.txt
C++ PrimeNumbers/: CMakeLists.txt
CTime/: CMakeLists.txt
CTime/src/: CTime.cpp
CTime/tests/: CMakeLists.txt  ctime_tests.cpp
Commons/: CMakeLists.txt
Commons/src/: dummy.cpp
Commons/tests/: CMakeLists.txt  DummyFile.cpp  main_of_tests.cpp  tests_data.hpp
Console/: CMakeLists.txt
Console/src/: Console.cpp  Console_Unix.cpp  Console_Windows.cpp
Console/tests/: CMakeLists.txt  GetYesOrNo.cpp  GetYesOrNo_tests.py
Containers/: CMakeLists.txt
Containers/src/: dummy_containers.cpp
Containers/tests/: CMakeLists.txt  array_tests.cpp  fixed_length_vector_tests.cpp  streams_tests.cpp
Datetime/: CMakeLists.txt
Datetime/src/: Date.cpp  DateUtils.cpp  DateUtils_MaxYear.cpp  DateUtils_TZ.cpp
Datetime/tests/: CMakeLists.txt  date_tests.cpp
Environment/: CMakeLists.txt
Environment/src/: Environment_Unix.cpp  Environment_Windows.cpp
Environment/tests/: CMakeLists.txt  Environment_tests.cpp
Filesystem/: CMakeLists.txt
Filesystem/src/: File.cpp  FileOpen.cpp  FileRead.cpp  Filesystem.cpp  FilesystemOSHelper.cpp  FilesystemOSHelper.hpp  FilesystemOSHelper_Unix.cpp  FilesystemOSHelper_Windows.cpp  Filesystem_Constants.cpp  Filesystem_Unix.cpp  Filesystem_Unix_ReadWholeFile.cpp  Filesystem_Windows.cpp  Filesystem_Windows_ReadWholeFile.cpp  WindowsAPIHelper.cpp  WindowsAPIHelper.hpp
Filesystem/tests/: CMakeLists.txt  Filesystem_ListFilesInDirectory_tests.cpp  Filesystem_ReadWholeFile_tests.cpp  Filesystem_tests_commons.hpp  file_tests.cpp
MyWorks_test0/Google_tests/: CMakeLists.txt  date_tests.cpp  file_tests.cpp  tests_datas.hpp
SharedLibs/: CMakeLists.txt
SharedLibs/src/: SharedLib_CanOpen.cpp  SharedLib_DL.cpp  SharedLib_Windows.cpp  SharedLibs.cpp  SharedLibs_DL_internals.hpp  SharedLibs_SearchPaths_DL.cpp  SharedLibs_SearchPaths_Windows.cpp
SharedLibs/tests/: CMakeLists.txt  can_open_tests.cpp  my_lib_1.cpp  my_lib_1.hpp  my_lib_1_empty.hpp  my_lib_2.cpp  my_lib_2.hpp  my_lib_2_tests.cpp  (+8 more)
Strings/: CMakeLists.txt
System/: CMakeLists.txt
SystemErrors/: CMakeLists.txt  CheckStrerrorFunctionsExist.cmake  TestSystemErrors.cpp
Volumes/: CMakeLists.txt
Windows/: CMakeLists.txt
src/: Array.hpp  CMakeLists.txt  Command.cpp  Command.hpp  CommandHelper.cpp  CommandHelper.hpp  CommandHelper_Generic.cpp  CommandHelper_Unix.cpp  CommandHelper_Windows.cpp  DynamicLibrary.cpp  DynamicLibrary.hpp  File.cpp  File.hpp  FileOpen.cpp  FileOpen.hpp  GeoCoord.cpp  Security.cpp  Security.hpp  StringSafePlaceHolder.hpp  Toolbox.cpp  Toolbox.hpp  UnixAPIHelper.cpp  UnixAPIHelper.hpp  WindowsAPIHelper.cpp  WindowsAPIHelper.hpp  WindowsAPIHelper_Command.cpp  main.cpp
(+197 files in other folders)
